# did-you

./: .gitignore  ChangeLog  MANIFEST.in  README.md  did-you-client.py  did-you-server.py  did-you-subscriber.py  did_you.conf.sample  did_you.proto  did_you_client.py  did_you_config.py  did_you_server.py  requirements.txt  setup.cfg  setup.py  task_command.py  taskdef.capnp
config/: did_you.conf.sample
contrib/: did_you
did_you/: __init__.py  did_you_server.py
did_you/command/: __init__.py  did_you_server.py
did_you/config/: __init__.py  did_you_config.py
did_you/server/: __init__.py
did_you/utils/: __init__.py
scripts/: did_you_daemon
