[metadata]
name = did_you
summary = Distributed task reminder
classifier =
    Programming Language :: Python :: 3

[global]
setup-hooks =
    pbr.hooks.setup_hook        

[files]
packages =
    did_you
data_files =
    /usr/local/etc =
        config/did_you.conf    

[entry_points]
    console_scripts =
        did_you_server = did_you.command:run_server
